apps/cluster-core/cloudflare-tunnel/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: cloudflare-tunnel
  labels:
    app.kubernetes.io/name: cloudflared
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: cloudflared
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cloudflared
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "2000"
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:latest # or specific version like 2024.1.5
          args:
            - tunnel
            - --metrics
            - 0.0.0.0:2000
            - --no-autoupdate
            - run
          livenessProbe:
            httpGet:
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 128Mi
